# ChatAssistant

./: .gitignore  nuxt.config.ts  package-lock.json  package.json  useful_nuxtLayoutFunctions.md
prisma/: schema.prisma
src/: app.vue
src-tauri/: Cargo.toml  docker-compose.yml  tauri.conf.json
src-tauri/prisma/: schema.prisma
src-tauri/src/: error.rs  main.rs
src-tauri/src/auth_service/src/: auth_utils.rs  db.rs  lib.rs
src-tauri/src/backend/: auth.rs
src/assets/scss/: quasar.variables.scss
src/components/: TitleBar.vue
src/firebase/: firebase.ts
src/layouts/: custom.vue  default.vue
src/middleware/: auth.ts
src/pages/: index.vue  login.vue
