[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

[workspace]
members = ["prisma-cli"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0.203", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "window-unminimize", "window-unmaximize", "window-start-dragging", "window-minimize", "window-show", "window-hide", "window-maximize", "window-close"] }
window-shadows = "0.2.2"
window-vibrancy = "0.5.0"
raw-window-handle = "0.6.0"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.61"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
